--- a/Class_Notes/CSS/CSS_Intro/style.css
+++ b/Class_Notes/CSS/CSS_Intro/style.css
@@ -34,7 +34,7 @@ div#parent-container {
     border: 2px solid black;
     margin: 0 auto;
     width: 300px;
-    padding: 3  0px;
+    padding: 30px;
     border-radius: 20px;
     /* margin-top: 100px;
     margin-left: 100px; */
