--- a/Class_Notes/CSS/Microsoft_Clone/style.css
+++ b/Class_Notes/CSS/Microsoft_Clone/style.css
@@ -1,5 +1,5 @@
 nav {
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     display: flex;
 }
 
@@ -13,7 +13,7 @@ ul {
 }
 
 .left-nav-ul {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     list-style-type: none;
     display: flex;
     flex-direction: row;
@@ -24,14 +24,92 @@ ul {
 }
 
 .right-nav-ul {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     list-style-type: none;
     display: flex;
     flex-direction: row;
-    flex-basis: 20%;
+    flex-basis: 25%;
+}
+
+.right-nav-ul li {
+    margin-left: 10px;
+    justify-content: space-around;
+    align-items: center;
+    
 }
 
 #microsoft-logo {
     width: auto;
     height: 30px;
+}
+
+.main-container {
+    /* border: 2px solid red; */
+    height: 430px;
+    background-image: url("./images/surface-pro-image.avif");
+    background-size: contain;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+}
+
+.highlight-container {
+    background-color: white;
+    height: 40%;
+    width: 30%;
+    margin: 50px;
+    padding: 35px;
+}
+
+.new-tag {
+    background-color: #ffb900;
+    color: black;
+    font-weight: bold;
+    padding: 5px;
+}
+
+.surface-description {
+    font-size: 14px;
+}
+
+.pre-order {
+    background-color: #0067b8;
+    color: white;
+    padding: 10px;
+    border-radius: 2px;
+    border: none;
+    font-size: 12px;
+}
+
+.meet-pro-title {
+    margin-bottom: 0px;
+}
+
+.options {
+    /* border: 2px solid blue; */
+    height: 125px;
+    display: flex;
+    padding: 0px 70px 0px 70px;
+}
+
+.options > * {
+    /* border: 2px solid red; */
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.options > div * {
+    margin: 5px;
+}
+
+.options > div i {
+    font-size: 25px;
+}
+
+.option > div a { 
+    font-size: 13px
 }
