--- a/Assignments/Assignment_3/Part_3/style.css
+++ b/Assignments/Assignment_3/Part_3/style.css
@@ -69,12 +69,12 @@
   }
 
   h1 {
-    font-size: 20px;
+    font-size: 2rem;
     text-align: center;
   }
 
   h2 {
-    font-size: 16px;
+    font-size: 1.6rem;
   }
 
   p, li, ol {
@@ -142,7 +142,7 @@
  nav a:link {
   outline: none;
   text-decoration: none;
-  font-size: 16px;
+  font-size: 1.6rem;
   font-weight: bold;
  }
 
