Completed navigation bar

--- a/Assignments/Assignment_3/Part_4/style.css
+++ b/Assignments/Assignment_3/Part_4/style.css
@@ -26,12 +26,18 @@ body {
   nav {
     background-color: #000;
     padding: .5em;
+    position: sticky;
+    width: 100%;
+    top: 0;
   }
   
   nav ul {
     margin: 0;
     padding: 0;
     list-style: none;
+    display: flex;
+    flex-direction: row; 
+    justify-content: space-between;  
   }
   
   nav a {
