--- a/Assignments/Assignment_3/Part_4/style.css
+++ b/Assignments/Assignment_3/Part_4/style.css
@@ -50,8 +50,10 @@ body {
     list-style: none;
     margin: 0;
     padding: 0;
-  }
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1px;
 
   .feature {
       width: 200px;
-  }
+  } 
