--- a/Assignments/Assignment_3/Part_2/style.css
+++ b/Assignments/Assignment_3/Part_2/style.css
@@ -17,4 +17,5 @@ div {
     border: 1px solid #533747;
     background-image: linear-gradient(to bottom right, rgba(0,0,0,0), rgba(0,0,0,0.2) 30% ,rgba(0,0,0,0.2));
     box-shadow: 2px 2px 2px black, inset 2px 2px 5px rgba(255, 255, 255, 0.7), inset -2px -2px 5px rgba(0, 0, 0, 0.7);
+    margin: 0 auto;
 }   
